--- a/P000400.opf/meta.yml
+++ b/P000400.opf/meta.yml
@@ -3,5 +3,18 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG23711
   title: ལྷ་མོ་རིག་བྱེད་མ་ལ་བསྟོད་པའི་རྒྱ་ཆེར་འགྲེལ་པ་རྡོ་རྗེ་གསུམ་གྱི་སྣང་བ།
-  volume: ''
+  volume:
+    fc85ddd6e7b24ef9a937e4a0089276f7:
+      image_group_id: I1KG23811
+      title: Volume 1 of lha mo rig byed ma la bstod pa'i rgya cher 'grel pa rdo rje
+        gsum gyi snang ba/
+      volume_number: 1
+      total_pages: 264
   author: ''
+ebook_metadata:
+  title: ལྷ་མོ་རིག་བྱེད་མ་ལ་བསྟོད་པའི་རྒྱ་ཆེར་འགྲེལ་པ་རྡོ་རྗེ་གསུམ་གྱི་སྣང་བ།
+  author: ''
+  sku: P000400
+  cover: cover.jpg
+  layers:
+  - pagination
