--- a/P000400.opf/meta.yml
+++ b/P000400.opf/meta.yml
@@ -1,16 +1,17 @@
-id: opecha:P000400
+id: P000400
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG23711
   title: ལྷ་མོ་རིག་བྱེད་མ་ལ་བསྟོད་པའི་རྒྱ་ཆེར་འགྲེལ་པ་རྡོ་རྗེ་གསུམ་གྱི་སྣང་བ།
-  volume:
+  author: ''
+  volumes:
     fc85ddd6e7b24ef9a937e4a0089276f7:
       image_group_id: I1KG23811
       title: Volume 1 of lha mo rig byed ma la bstod pa'i rgya cher 'grel pa rdo rje
         gsum gyi snang ba/
       volume_number: 1
       total_pages: 264
-  author: ''
+      base_file: v001.txt
 ebook_metadata:
   title: ལྷ་མོ་རིག་བྱེད་མ་ལ་བསྟོད་པའི་རྒྱ་ཆེར་འགྲེལ་པ་རྡོ་རྗེ་གསུམ་གྱི་སྣང་བ།
   author: ''
