--- a/P000400.opf/layers/v001/Pagination.yml
+++ b/P000400.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: b423f20171a84e87a2cbf360c526dd57
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   bd3f485b2b9444b2b869ea9dbec979e5:
