--- a/P000400.opf/meta.yml
+++ b/P000400.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P000400
 initial_creation_type: ocr
+created_at: 17/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG23711
   title: ལྷ་མོ་རིག་བྱེད་མ་ལ་བསྟོད་པའི་རྒྱ་ཆེར་འགྲེལ་པ་རྡོ་རྗེ་གསུམ་གྱི་སྣང་བ།
@@ -12,10 +14,3 @@ source_metadata:
       volume_number: 1
       total_pages: 264
       base_file: v001.txt
-ebook_metadata:
-  title: ལྷ་མོ་རིག་བྱེད་མ་ལ་བསྟོད་པའི་རྒྱ་ཆེར་འགྲེལ་པ་རྡོ་རྗེ་གསུམ་གྱི་སྣང་བ།
-  author: ''
-  sku: P000400
-  cover: cover.jpg
-  layers:
-  - pagination
